<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openthinclient</groupId>
	<artifactId>manager</artifactId>
	<packaging>pom</packaging>

	<name>openthinclient.org Manager</name>
	<version>2019.1-SNAPSHOT</version>
	<url>http://www.openthinclient.org</url>
	<inceptionYear>2007</inceptionYear>

	<organization>
		<name>openthinclient GmbH</name>
		<url>http://www.openthinclient.com</url>
	</organization>

	<licenses>
		<license>
			<name>GPL v2</name>
			<distribution>manual</distribution>
			<url>http://www.gnu.org/copyleft/gpl.html</url>
		</license>
	</licenses>

	<issueManagement>
		<system>github</system>
        <url>https://github.com/openthinclient/openthinclient-manager/issues</url>
	</issueManagement>

	<scm>
        <connection>scm:git:git@github.com/openthinclient/openthinclient-manager.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/opentinclient/openthinclient-manager.git
        </developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<apacheds.version>1.0.2</apacheds.version>
		<levigo-utils.version>2.0.4</levigo-utils.version>
        <slf4j.version>1.7.7</slf4j.version>
        <apache.shiro-core.version>1.2.3</apache.shiro-core.version>
        <!--
            GLOBAL PROPERTIES FOR THE VAADIN BASED WEB CONSOLE
        -->
        <productionMode>false</productionMode>
		<vaadin.version>8.5.2</vaadin.version>
        <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
		<vaadin4spring.version>2.0.0.RELEASE</vaadin4spring.version>

		<!--
			SPRING FRAMEWORK AND EXTENSIONS VERSIONS
		-->
		<spring.version>4.3.2.RELEASE</spring.version>
		<spring.boot.version>1.4.0.RELEASE</spring.boot.version>
		<spring.security.version>4.0.3.RELEASE</spring.security.version>
		<mapstruct.version>1.1.0.Final</mapstruct.version>
	</properties>

	<modules>
		<module>util</module>
		<module>common</module>
		<module>advisor</module>
		<module>thirdparty</module>
		<module>db</module>
		<module>services</module>
		<module>console-web</module>
		<module>first-start-wizard</module>
		<module>console-desktop</module>
		<module>runtime</module>
		<module>sysreport</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
				<version>1.9.0</version>
				<configuration>
					<gitFlowConfig>
						<versionTagPrefix>manager-</versionTagPrefix>
					</gitFlowConfig>
				</configuration>
			</plugin>
        </plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.8</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>webstart-maven-plugin</artifactId>
					<version>1.0-beta-6</version>
				    <dependencies>
				          <dependency>
				            <groupId>org.codehaus.mojo</groupId>
				            <artifactId>keytool-api-1.7</artifactId>
				            <version>1.4</version>
				          </dependency>
				    </dependencies>
				</plugin>
				<plugin>
					<groupId>pl.project13.maven</groupId>
					<artifactId>git-commit-id-plugin</artifactId>
					<version>2.1.11</version>
					<executions>
						<execution>
							<goals>
								<goal>revision</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<verbose>true</verbose>
						<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
						<generateGitPropertiesFile>true</generateGitPropertiesFile>
						<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<archive>
							<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.vaadin</groupId>
					<artifactId>vaadin-maven-plugin</artifactId>
					<version>${vaadin.plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
        <!--
            Required repository for the web management console.
        -->
        <repository>
            <id>vaadin-addons</id>
            <url>http://maven.vaadin.com/vaadin-addons</url>
        </repository>
		<repository>
			<id>openthinclient.org</id>
			<url>http://openthinclient.sourceforge.net/maven2</url>
		</repository>
		<repository>
			<id>openthinclient.org-public</id>
			<url>https://secure.openthinclient.org/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>nexus-oss-snapshots</id>
			<url>https://oss.sonatype.org/service/local/repositories/snapshots/content</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>ej-technologies</id>
			<url>http://maven.ej-technologies.com/repository</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>openthinclient.org-releases</id>
			<url>https://secure.openthinclient.org/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>openthinclient.org-snapshots</id>
			<url>https://secure.openthinclient.org/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>castor</groupId>
				<artifactId>castor</artifactId>
				<version>0.9.9.1</version>
			</dependency>

			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache</artifactId>
				<version>1.2</version>
			</dependency>

			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.4</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.server</groupId>
				<artifactId>apacheds-core-shared</artifactId>
				<version>${apacheds.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.server</groupId>
				<artifactId>apacheds-protocol-shared</artifactId>
				<version>${apacheds.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.server</groupId>
				<artifactId>apacheds-core</artifactId>
				<version>${apacheds.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.server</groupId>
				<artifactId>apacheds-server-main</artifactId>
				<version>${apacheds.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.shared</groupId>
				<artifactId>shared-ldap</artifactId>
				<version>0.9.5.5</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.shared</groupId>
				<artifactId>shared-asn1</artifactId>
				<version>0.9.5.5</version>
			</dependency>

			<!-- APACHE SHIRO -->
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-core</artifactId>
				<version>${apache.shiro-core.version}</version>
			</dependency>

            <!-- SLF4J -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-ext</artifactId>
				<version>${slf4j.version}</version>
			</dependency>


			<!--
                SPRING FRAMEWORK

                depending on spring-boot-dependencies, as this will include
                dependency management for spring and spring security (among others).
            -->
			<dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
            </dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-bom</artifactId>
				<version>${spring.security.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
	        <!--  dependency>
	            <groupId>org.springframework.ldap</groupId>
	            <artifactId>spring-ldap-core</artifactId>
	            <version>2.0.4.RELEASE</version>
	        </dependency -->

			<!--
				VAADIN
			-->
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!--
                Utility Libraries making our life easier.
            -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>27.1-jre</version>
            </dependency>
			<dependency>
				<groupId>org.mapdb</groupId>
				<artifactId>mapdb</artifactId>
				<version>1.0.7</version>
			</dependency>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-spring-boot</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.vaadin</groupId>
				<artifactId>viritin</artifactId>
				<version>2.0.beta1</version>
			</dependency>

			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>1.1.0.Final</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>1.1.0.Final</version>
				<classifier>sources</classifier>
				<scope>compile</scope>
			</dependency>

	        <!-- i18n -->
	        <dependency>
	            <groupId>ch.qos.cal10n</groupId>
	            <artifactId>cal10n-api</artifactId>
	            <version>0.8.1</version>
	        </dependency>

			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct-jdk8</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

		</dependencies>
    </dependencyManagement>

	<dependencies>

		<!--
			GLOBAL LOGGING FRAMEWORK
		-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
